force leaflet popup msg color to black on mobile (fix for #548)

--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -190,3 +190,11 @@ body {
   top:0px !important;
   left:0px !important;
 }
+
+/*
+ * for some reason leaflet popups on mobile are colored white on white
+ * so force the popup msg color to black
+ */
+.leaflet-popup-content{
+    color:black;
+}
